--- a/Credit_Card_Default_Pred.ipynb
+++ b/Credit_Card_Default_Pred.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Credit_Card_Default_Pred.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO/2vytZSLZDCXIaFffUDPT",
+      "authorship_tag": "ABX9TyPtjD/1VynThdpsKLqX5hv/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2326,12 +2326,50 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "KMDw7igdRs7b"
+      },
+      "source": [
+        "from sklearn.model_selection import train_test_split # to split the data into two parts\n",
+        "from sklearn.linear_model import LogisticRegression # to apply the Logistic regression\n",
+        "from sklearn.feature_selection import RFE\n",
+        "from sklearn.model_selection import KFold # for cross validation\n",
+        "from sklearn.model_selection import GridSearchCV # for tuning parameter\n",
+        "from sklearn.model_selection import RandomizedSearchCV  # Randomized search on hyper parameters.\n",
+        "from sklearn.preprocessing import StandardScaler # for normalization\n",
+        "from sklearn.pipeline import Pipeline \n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "import xgboost as xgb\n",
+        "from xgboost import XGBClassifier\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.metrics import classification_report\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "from sklearn.neighbors import KNeighborsClassifier #KNN\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import ExtraTreesClassifier\n",
+        "from sklearn.feature_selection import SelectFromModel\n",
+        "from sklearn import metrics # for the check the error and accuracy of the model\n",
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
+        "\n",
+        "import os\n",
+        "#print(os.listdir(\"../input\"))"
+      ],
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "iajwerGl9GMk"
       },
       "source": [
-        ""
+        "# Original dataset\n",
+        "X = df.drop('Default', axis=1)  \n",
+        "y = df['Default']\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size=0.2, stratify=y, random_state=42)"
       ],
-      "execution_count": null,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -2340,9 +2378,11 @@
         "id": "6trkrjYL9GIf"
       },
       "source": [
-        ""
+        "# Dataset with standardized features\n",
+        "Xstd_train, Xstd_test, ystd_train, ystd_test = train_test_split(stdX,y, test_size=0.2, stratify=y,\n",
+        "                                                                random_state=42)"
       ],
-      "execution_count": null,
+      "execution_count": 87,
       "outputs": []
     },
     {
