--- a/Credit_Card_Default_Pred.ipynb
+++ b/Credit_Card_Default_Pred.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Credit_Card_Default_Pred.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOmFSWIXxorUw3Eeswva7bX",
+      "authorship_tag": "ABX9TyPHXuwi4e8RTDf9wR3Y+rAG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,6 +107,21 @@
         ". . .;\n",
         "\n",
         "***X23*** = amount paid in April, 2005."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ecBUV00bmUs4"
+      },
+      "source": [
+        "**Objective**:\n",
+        "\n",
+        "Objective of our project is to predict which customer might default in upcoming months. Before going any fudther let's have a quick look on defination of what actually meant by Credit Card Default.\n",
+        "\n",
+        "We are all aware what is credit card. It is type of payment payment card in which charges are made against a line of credit instead of the account holder's cash deposits. When someone uses a credit card to make a purchase, that person's account accrues a balance that must be paid off each month.\n",
+        "\n",
+        "Credit card default happens when you have become severely delinquent on your credit card payments.Missing credit card payments once or twice does not count as a default. A payment default occurs when you fail to pay the Minimum Amount Due on the credit card for a few consecutive months."
       ]
     },
     {
